# ur5_moveit_control

ur5_moveit_control/: CMakeLists.txt  package.xml
ur5_moveit_control/launch/: ur5_joint_ctrl.launch
ur5_moveit_control/scripts/: ur5_ctrl.py  ur5_plot.py
