<?xml version="1.0"?>
<package format="2">
  <name>ur5_moveit_control</name>
  <version>0.1.0</version>
  <description>The description of your package</description>
  
  <!-- Maintainer information -->
  <maintainer email="your_email@example.com">Your Name</maintainer>
  
  <!-- License information -->
  <license>MIT License</license>
  
  <!-- ROS dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Build dependencies -->
  <build_depend>sys</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <!-- Add any other build dependencies here -->
  
  <!-- Run dependencies -->
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <!-- Add any other run dependencies here -->
  
  <!-- Testing dependencies (if applicable) -->
  <test_depend>rostest</test_depend>
  
  <!-- Other dependencies (if applicable) -->
  <!-- <depend>package_name</depend> -->
</package>
